CIMA_POC/Componentes_core/kubernetes/jaeger/jaeger-all-in-one.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: cima-tracing
  labels:
    app: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
      -   env:
          - name: COLLECTOR_ZIPKIN_HTTP_PORT
            value: "9411"
          image: jaegertracing/all-in-one
          name: jaeger
          ports:
            - containerPort: 5775
              protocol: UDP
            - containerPort: 6831
              protocol: UDP
            - containerPort: 6832
              protocol: UDP
            - containerPort: 5778
              protocol: TCP
            - containerPort: 16686
              protocol: TCP
          volumeMounts:
            - name: tmp-volume
              mountPath: /tmp
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      volumes:
        - name: tmp-volume
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-query
  namespace: cima-tracing
  labels:
    app: jaeger
spec:
  selector:
    app: jaeger
  ports:
    - name: query-http
      port: 16686
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-agent
  namespace: cima-tracing
  labels:
    app: jaeger
spec:
  ports:
  - name: agent-zipkin-thrift
    port: 5775
    protocol: UDP
    targetPort: 5775
  - name: agent-compact
    port: 6831
    protocol: UDP
    targetPort: 6831
  - name: agent-binary
    port: 6832
    protocol: UDP
    targetPort: 6832
  - name: agent-configs
    port: 5778
    protocol: TCP
    targetPort: 5778
  clusterIP: None
  selector:
    app: jaeger
