CIMA_POC/Componentes_core/kubernetes/jaeger/jaeger-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ingress
  namespace: cima-tracing
spec:
  ingressClassName: traefik-lb
  tls:
  - hosts:
    - jaeger.cima.es
  rules:
    - host: jaeger.cima.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger-query
                port:
                  number: 16686
